--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ body {
     background-color: #1e1e1e;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    
 }
 
 h1 {
@@ -33,58 +34,55 @@ h1 {
     width: 100%;
     padding: 10px;
     font-size: 18px;
-    border-radius: 5px;
+    border-radius:5px;
     border: 1px solid #444;
     background-color: #333;
     color: white;
 }
 
+img:first-of-type {
+    margin-bottom: 10px;
+    top: 30px;
+    position: fixed;
+    height: auto;
+}
+
+img:last-of-type {
+    padding: 30px;
+    position: fixed;
+    bottom: 0;
+    width:70%;
+}
+
+
 button {
-    
-    margin-right: 180px;
-    width: 50%;
+    width: 49%;
     padding: 10px;
     margin-top: 10px;
+    margin-bottom: -15px;
     font-size: 16px;
-    background-color: #013508;
+    background-color: #013508; 
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    justify-content: space-between;
 }
 
-button2 {
-    width: 50%;
-    padding: 10px;
-    left: 150px;
-    margin-left: 180px;
-    font-size: 16px;
-    background-color: #e2ad0093;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    
+button:first-of-type:hover {
+    background-color: #002e07;
+}
+button:last-of-type:hover {
+    background-color: #7c5f00;
 }
 
-button2:hover {
-    background-color: #b3890085;
-}
-
-button:hover {
-    background-color: #0135089f;
-}
-
-.resultados {
+.resultado {
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: bold;
-    text-align: left;
 }
 
-<<<<<<< HEAD
 .resultado2 {
 margin-top: 5px;
 margin-left: 15px;
@@ -113,9 +111,3 @@ font-weight: bold;
     }
 
 
-=======
-.resultado-item {
-    margin-bottom: 10px;
-}
-
->>>>>>> bea4d0b2c61cfdf547a6e96a8f083df49f9b5bf2
